# TextMAN-Text-Editor

./: .all-contributorsrc  .gitignore  CMakeLists.txt  README.md  main.cpp  resource.rc
include/app/: AppController.h  DocumentManager.h
include/ui/: Footer.h  MainWindow.h  MenuBar.h  TextArea.h  Toolbar.h
src/app/: AppController.cpp  DocumentManager.cpp
src/ui/: Footer.cpp  MainWindow.cpp  MenuBar.cpp  TextArea.cpp  Toolbar.cpp
